@@ -265,4 +265,4 @@ sg_miracle_skill_ratio: 1
 sg_miracle_skill_duration: 3600000
 
 //Angel of the Sun, Moon and Stars skill ratio (100% = 10000)
-sg_angel_skill_ratio: 1
+sg_angel_skill_ratio: 10
